Fixed Gallery top and bottom cut off issue

--- a/Arnies Cakes.css
+++ b/Arnies Cakes.css
@@ -5,11 +5,17 @@
   src: local('EBGaramond Regular'), local('EBGaramond-Regular'), url('./fonts/EBGaramond-Regular.ttf') format('truetype');
 }
 
+header {
+  float: none;
+  clear: both;
+}
+
 body {
   background-image: url("./Index Images/Background.jpg");
   background-attachment: fixed;
   padding-top: 70px;
   font-family: 'EBGaramond';
+  width: 99vw;
 }
 
 .bg {
@@ -103,9 +109,9 @@ body {
   margin: 15vw auto;
   position: relative;
   animation-name: fill, text;
-  animation-duration: 1s, 1s;
+  animation-duration: 2s, 1s;
   animation-iteration-count: 1, 1;
-  animation-delay: 1s, 1s;
+  animation-delay: 0s, 1s;
 }
 
 .mainContain {
@@ -178,11 +184,10 @@ a:active {
   background: linear-gradient(45deg, #D3BBDD, #ECE3F0);
 
   /*background: rgb(248,248,255);*/
-  animation-delay: 1s, 6.5s;
+  animation-delay: 0s, 6.5s;
   animation-name: drop, bounce;
-  animation-duration: 1s, 2s;
+  animation-duration: 2s, 2s;
   align-self: flex-end;
-  animation-duration: 2s;
     /*background-color: rgb(248,248,255);*/
   transform-origin: bottom;
   animation-timing-function: cubic-bezier(0.280, 0.840, 0.420, 1);
@@ -192,6 +197,7 @@ a:active {
 ::-webkit-scrollbar {
   width:0em;
 }
+
 
 .drop {
   animation: drop 1.1s both;
@@ -356,6 +362,7 @@ a:active {
 
 .stopGap {
   top: 100px;
+
 }
 
 .sort { 
@@ -365,18 +372,28 @@ a:active {
 }
 
 .fullSize {
-  top: 200px;
+  top:200px;
   left: 2vw;
-  min-height:10vh;
-  max-height: 75vh;
   position: absolute;
-  width: 100vw;
+  width: 98vw;
   overflow: hidden;
 }
 
 .fullSize img {
   max-width: 15vw;
   min-width: 250px;
+  -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+  overflow: hidden;
+}
+
+.fullSize img:hover {
+  max-width: 15vw;
+  min-width: 250px;
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
   overflow: hidden;
 }
 
